= 2.2.4 =
* Neighbourhood SEO variable not working on single page - FIXED
* GD Categories widget option include categories is not working for child categories - FIXED

= 2.2.3 =
* CPT sorting unable to save descending order - FIXED
* Custom fields setting Price Options should not visible on all field types - CHANGED

= 2.2.2 =
* CPT pages options show default option as a placeholder - CHANGED
* Select field required error option not working - FIXED
* Backend setting style broken for legacy mode - FIXED

= 2.2.1 =
* Brave browser can cause API verify function to return false positive (warning added)- FIXED
* Place settings checkboxes not all showing correct setting - FIXED
* Setup wizard lightbox membership shows empty cart - FIXED/CHANGED

= 2.2 =
* Long file names can cause overflow issues on mobile - FIXED
* Admin settings screen UI changed to AUI style (UI breaking change to older addons) - CHANGED
* Setup Wizard updated - CHANGED
* Block theme like Twenty Twenty Two don't loads map scripts - FIXED
* Multiselect checkbox required error option not working - FIXED
* Chrome Autofill covers Google Autocomplete address search - FIXED

= 2.1.1.13 =
* Hide new line break for empty address in post address - CHANGED
* WordPress v5.9 update breaks custom fields drag and drop - FIXED

= 2.1.1.12 =
* Yoast SEO select2 conflicts on backend add listing page - FIXED
* Comment link from recent reviews don't scrolls to comment - FIXED
* Hook added to filter preview action text - ADDED
* Report Post feature added - ADDED
* Map filter should not cover copyright text - FIXED
* GD > Recently Viewed is not working properly on SG Cached site - FIXED
* GD > Single Tabs does not scrolls to tab content - FIXED
* GD > Listings AJAX pagination don't loads Kadence blocks CSS - FIXED
* Default category conditional field is not triggered on main category changed - FIXED
* Google map don't populates region for some addresses within Greece - FIXED