@@ -1,6 +1,7 @@
 = 2.2.4 =
 * Neighbourhood SEO variable not working on single page - FIXED
 * GD Categories widget option include categories is not working for child categories - FIXED
+* Prevent add/delete column for reserved fields like city, region etc - CHANGED
 
 = 2.2.3 =
 * CPT sorting unable to save descending order - FIXED
